--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:11:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateLogin</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:11</td>   <td>72506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFavoriteIcon()[pri:1, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateFavoriteIcon</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:11</td>   <td>72672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSearching()[pri:2, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateSearching</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:11</td>   <td>72679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePDP()[pri:5, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidatePDP</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>77706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRecentViewLink()[pri:6, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateRecentViewLink</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>77735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLogo()[pri:7, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateFooterLogo</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>77771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfNavigation()[pri:8, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateMyProfNavigation</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>77781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateHeaderLogo()[pri:9, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateHeaderLogo</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>78030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalog()[pri:10, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateStandardsCatalog</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>78045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalogDetail()[pri:11, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateStandardsCatalogDetail</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>78052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAllProduct()[pri:12, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateAllProduct</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>78061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAudioCablesCategory()[pri:13, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateAudioCablesCategory</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateResources()[pri:14, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateResources</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSpecialOffer()[pri:15, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateSpecialOffer</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCartPage()[pri:16, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateCartPage</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82115</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLinks()[pri:21, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateFooterLinks</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateTrackpage()[pri:22, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateTrackpage</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateordersPage()[pri:23, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateordersPage</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePurchaseAnalysisPage()[pri:24, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidatePurchaseAnalysisPage</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePAEmail()[pri:25, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidatePAEmail</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCalendarPage()[pri:26, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateCalendarPage</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSavedReports()[pri:29, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateSavedReports</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateComparePage()[pri:30, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateComparePage</td> 
-  <td>main@1327536153</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>82351</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTestIE.ValidateSmokeTest@6af93788]">&lt;&lt;closebrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:38:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateLogin</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:41:10</td>   <td>180815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFavoriteIcon()[pri:1, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFavoriteIcon</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:41:42</td>   <td>212135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSearching()[pri:2, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSearching</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:42:04</td>   <td>234043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePDP()[pri:5, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePDP</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:43:12</td>   <td>302025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRecentViewLink()[pri:6, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateRecentViewLink</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:43:39</td>   <td>329247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLogo()[pri:7, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFooterLogo</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:43:43</td>   <td>333295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfNavigation()[pri:8, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateMyProfNavigation</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:44:03</td>   <td>353789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateHeaderLogo()[pri:9, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateHeaderLogo</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:44:17</td>   <td>367070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalog()[pri:10, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateStandardsCatalog</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:44:23</td>   <td>373558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalogDetail()[pri:11, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateStandardsCatalogDetail</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:45:00</td>   <td>410461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAllProduct()[pri:12, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateAllProduct</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:45:11</td>   <td>421072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAudioCablesCategory()[pri:13, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateAudioCablesCategory</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:45:30</td>   <td>440838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateResources()[pri:14, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateResources</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:45:58</td>   <td>468678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSpecialOffer()[pri:15, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSpecialOffer</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:45:59</td>   <td>469284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCartPage()[pri:16, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCartPage</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:46:05</td>   <td>475398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLinks()[pri:21, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFooterLinks</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:46:28</td>   <td>498671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateTrackpage()[pri:22, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateTrackpage</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:46:49</td>   <td>519138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateordersPage()[pri:23, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateordersPage</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:46:59</td>   <td>529799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePurchaseAnalysisPage()[pri:24, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePurchaseAnalysisPage</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:47:10</td>   <td>540246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePAEmail()[pri:25, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePAEmail</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:47:13</td>   <td>543717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCalendarPage()[pri:26, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCalendarPage</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:47:30</td>   <td>560145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSavedReports()[pri:29, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSavedReports</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:47:45</td>   <td>575628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateComparePage()[pri:30, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateComparePage</td> 
+  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="838989">  <td>18/05/08 15:48:09</td>   <td>599170</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1254344205</td>   <td></td> </tr>
 </table>
